cmd/node-joiner/testdata/setup/default/0001_openshift-machine-config-operator-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-machine-config-operator
