cmd/node-joiner/testdata/setup/default/0010_ingress.yaml
apiVersion: config.openshift.io/v1
kind: Ingress
metadata:
  name: cluster
spec:
  domain: apps.ostest.test.metalkube.org
